feat: Refactor journal views, introduce streak and insight cards, and add a journal lock service.

--- a/Aurora/Info.plist
+++ b/Aurora/Info.plist
@@ -8,5 +8,7 @@
 	</array>
 	<key>NSAlarmKitUsageDescription</key>
 	<string>We need alarm access to remind you about your tasks at the scheduled time</string>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Unlock your journal with Face ID</string>
 </dict>
 </plist>
