feat(journal): Add functional toolbar with camera, location & suggestions - Implement camera capture with permission handling - Add location tagging with reverse geocoding - Create journaling suggestions sheet with prompts - Add LocationService for location management - Add placeholder alerts for voice recording and AI tools - Update JournalEntry model with location properties

--- a/Aurora/Info.plist
+++ b/Aurora/Info.plist
@@ -10,5 +10,13 @@
 	<string>We need alarm access to remind you about your tasks at the scheduled time</string>
 	<key>NSFaceIDUsageDescription</key>
 	<string>Unlock your journal with Face ID</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Aurora uses your camera to add photos to journal entries</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Aurora uses your photo library to add images to journal entries</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Aurora uses your location to tag journal entries with where they were written</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Aurora uses your microphone to add voice recordings to journal entries</string>
 </dict>
 </plist>
